# generative-genesys

./: .gitignore  Dockerfile  LICENSE  README.md  adversaries.json  adversaries_schema.json  creature.json  package-lock.json  project.ipynb  pyproject.toml  vehicles.json
backend/: app.py  getting-current-status-payload.json  project.ipynb  update-payload.json
backend/data/adversaries/: genesys-official-EPG.json  genesys-official-GCRB-all.json  genesys-official-RoT.json  genesys-official-SotC.json
backend/src/: __init__.py  abilities_builder.py  base_creature_builder.py  main.py  talents_builder.py  weapons_builder.py
data/adversaries/: genesys-creature-catalogue.json  genesys-misc.json  genesys-official-SotB.json
generative-genesys-react/: package-lock.json  package.json
generative-genesys-react/src/: App.js
src/: __init__.py  abilities_builder.py  armor_builder.py  base_creature_builder.py  base_template_builder.py  main.py  skills_builder.py  talents_builder.py  utils.py  validator.py  weapons_builder.py
